# fafrifa

./: .gitignore  CITATION.cff  CONTRIBUTING.md  PROJECT_GUIDE.md  README.md
.github/workflows/: ci.yml
deliverable-1-workflow/sai-extremes/: LICENSE  README.md  environment.yml  pyproject.toml
deliverable-1-workflow/sai-extremes/config/: catalog.yaml
deliverable-1-workflow/sai-extremes/notebooks/: 01_extremes_workflow_demo.ipynb
deliverable-1-workflow/sai-extremes/src/sai_extremes/: __init__.py  catalog.py  diagnostics.py  indices.py  io.py  kernels.py  percentiles.py  pipeline.py  regions.py  synthetic.py
deliverable-1-workflow/sai-extremes/tests/: test_diagnostics.py  test_indices_xarray.py  test_kernels.py  test_percentiles.py
deliverable-2-dataset/: DATA_CARD.md  schema.yaml
deliverable-2-dataset/demo_output/: etccdi_CESM_G6-1.5K-HiLLA.npz  etccdi_CESM_G6-1.5K-SAI.npz  etccdi_E3SMv3_G6-1.5K-HiLLA.npz  etccdi_E3SMv3_G6-1.5K-SAI.npz  etccdi_MIROC_G6-1.5K-SAI.npz  etccdi_UKESM_G6-1.5K-HiLLA.npz  etccdi_UKESM_G6-1.5K-SAI.npz  indices_regional_means.csv
deliverable-2-dataset/scripts/: generate_demo_dataset.py  run_production.py
deliverable-3-uncertainty-entry/: Extratropical_Circulation_uncertainty_entry_REVISED.md
