[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sai-extremes"
version = "0.1.0"
description = "Open, reproducible ETCCDI extremes-indices workflow for GeoMIP G6-1.5K-SAI / G6-1.5K-HiLLA mid-latitude analysis (Reflective SAI Uncertainty Database, Track A)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Track A internship (Reflective)" }]
keywords = ["climate", "extremes", "ETCCDI", "SAI", "geoengineering", "GeoMIP", "xarray"]

# Core install is intentionally light. The numpy-only kernels + registry work
# with just numpy/pandas/pyyaml; the xarray pipeline and cloud I/O are extras.
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
xarray = ["xarray>=2023.1", "cftime>=1.6", "netCDF4>=1.6", "dask>=2023.1"]
cloud = ["s3fs>=2023.1", "zarr>=2.14", "fsspec>=2023.1"]
viz = ["matplotlib>=3.6", "cartopy>=0.21", "nc-time-axis>=1.4"]
test = ["pytest>=7.0"]
all = [
    "xarray>=2023.1", "cftime>=1.6", "netCDF4>=1.6", "dask>=2023.1",
    "s3fs>=2023.1", "zarr>=2.14", "fsspec>=2023.1",
    "matplotlib>=3.6", "cartopy>=0.21", "nc-time-axis>=1.4", "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
